--- a/style.css
+++ b/style.css
@@ -436,6 +436,24 @@ pre code {
   position: relative;
 }
 
+.btnn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: var(--space-8) var(--space-16);
+  border-radius: var(--radius-base);
+  font-weight: 500;
+  border: 1px solid var(--color-border-secondary);
+  background-color: var(--color-sec-purple);
+  gap: 10px;
+  line-height: 1.5;
+  cursor: pointer;
+  transition: all var(--duration-normal) var(--ease-standard);
+  text-decoration: none;
+  position: relative;
+}
+
 .btn:focus-visible {
   outline: none;
   box-shadow: var(--focus-ring);
